对list进行了测试 对递归解析进行了修改 添加了获得某个view的机制

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         <activity android:name=".activity.TestListActivity" />
         <activity android:name=".activity.TestJsonViewActivity" />
         <activity android:name=".activity.JsonToViewActivity" />
-        <activity android:name=".activity.ShowJsonActivity"></activity>
+        <activity android:name=".activity.ShowJsonActivity" />
+        <activity android:name=".activity.TestMyListActivity"></activity>
     </application>
 
 </manifest>
