view的包装 添加了部分insertview的逻辑 添加了部分模拟异步加载数据的逻辑

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         <activity android:name=".activity.JsonToViewActivity" />
         <activity android:name=".activity.ShowJsonActivity" />
         <activity android:name=".activity.TestMyListActivity" />
-        <activity android:name=".activity.TestGridActivity"></activity>
+        <activity android:name=".activity.TestGridActivity" />
+        <activity android:name=".activity.TestRelativeActivity"></activity>
     </application>
 
 </manifest>
